# LearnC

./: README.md
Basics/: aliasing.c  header.h  main.c  printf.c  some.c  storage_classes.c  structure_padding.c
Migrations/: 0.0.1.initialization.sql
Pending/: git_analyzer.sh  run_analyzer.sh  static_analyzer.sh
Pending/cmake/basic/: clear.sh  readme.txt  run.sh
Pending/cmake/basic/source/: CMakeLists.txt  basic.cxx  basic.h.in
Pending/code_building/gnu_makefiles/: README.md  makefile_sample  makefile_stack
Pending/code_building/gnu_toolkit/: Makefile.am  README.md  bootstrap  configure.ac  run.sh
Pending/design_pattern/: abstract.cpp  adapter.cpp  bridge.cpp  builder.cpp  chain_of_responsibility.cpp  command.cpp  composite.cpp  decorator.cpp  decorator_c11.cpp  designpatterns.txt  facade.cpp  factory.cpp  flyweight.cpp  interpreter.cpp  mediator.cpp  memento.cpp  observer.cpp  prototype.cpp  proxy.cpp  singleton.cpp  state.cpp  strategy.cpp  template.cpp  visitor.cpp
Pending/example/: c_file_list.data  clean.sh  commands  compile.sh  cpp_file_list.data  get_data.sh  jump.c  strings.c
Pending/example/array/: array.c  array_as_function_argument.c  array_as_function_return.c  array_char.c  array_multi-d.c  array_out_of_bound_garbage.c  array_out_of_bound_segmentation.c  array_pointer.c  array_remove_duplicacy.cpp  array_remove_given_number.c  array_sort.c  array_structure_array.c
Pending/example/basic/: address_extraction.c  aliases.cpp  assignment.c  assignment_operator.c  auto.cpp  basic.c  basic.cpp  constant.c  (+40 more)
Pending/gnu_c_compiler/: gcc-l.sh
(+327 files in other folders)
